# AlphaWindow

./: README.md  compose.yaml  dash.html
backend-python/: requirements.txt  stream_plot.py  ticker_loader.py
backend-python/ingest/: README.md  db.py  market_ingest.py  reddit_ingest.py  x_ingest.py
backend-python/sentiment/: finbert_service.py  sentiment_client.py
backend-rust/: .env.example  Cargo.toml  README.md
backend-rust/src/: db.rs  main.rs  market.rs  reddit.rs  sentiment.rs  x_api.rs
database/: init.sql
frontend/: AlphaWindow.html
frontend 2/: AlphaWindow.html  landing.html  market.html  media.html  social.html
frontend 2/css/: style.css
frontend 2/js/: app.js
