[package]
name = "alphawindow-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
bb8 = "0.9"
csv = "1.1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
onnxruntime = { version = "0.0.14", optional = true }
bytes = "1.4"

[features]
onnx = ["onnxruntime"]
